--- a/prefers-color-scheme/index.html
+++ b/prefers-color-scheme/index.html
@@ -43,6 +43,14 @@
 			cursor: pointer;
 			background: transparent;
 		}
+
+		.color {
+			background: rgba(0, 0, 0, 0) linear-gradient(71.18deg, rgb(0, 34, 255) -27.32%, rgb(0, 34, 255) -16.39%, rgb(81, 121, 254) -7.38%, rgb(165, 237, 182) 30.59%, rgb(250, 232, 90) 46.06%, rgb(253, 172, 62) 62.61%, rgb(255, 92, 0) 75.82%) repeat scroll 0% 0% padding-box text;			
+			-webkit-text-fill-color: transparent;
+		}
+		.bg-color {
+			background: rgba(0, 0, 0, 0) linear-gradient(71.18deg, rgb(0, 34, 255) -27.32%, rgb(0, 34, 255) -16.39%, rgb(81, 121, 254) -7.38%, rgb(165, 237, 182) 30.59%, rgb(250, 232, 90) 46.06%, rgb(253, 172, 62) 62.61%, rgb(255, 92, 0) 75.82%) repeat scroll 0% 0%;
+		}
 	</style>
 
 	<script>
@@ -65,6 +73,7 @@
 	</script>
 </head>
 <body>
+	<h1 class="color" style="width: 300px;">Change color theme</h1>
 	<button id="theme-toggle"> Change Theme </button>	
 </body>
 </html>
