--- a/prefers-color-scheme/index.html
+++ b/prefers-color-scheme/index.html
@@ -48,6 +48,7 @@
 			background: rgba(0, 0, 0, 0) linear-gradient(71.18deg, rgb(0, 34, 255) -27.32%, rgb(0, 34, 255) -16.39%, rgb(81, 121, 254) -7.38%, rgb(165, 237, 182) 30.59%, rgb(250, 232, 90) 46.06%, rgb(253, 172, 62) 62.61%, rgb(255, 92, 0) 75.82%) repeat scroll 0% 0% padding-box text;			
 			-webkit-text-fill-color: transparent;
 		}
+		
 		.bg-color {
 			background: rgba(0, 0, 0, 0) linear-gradient(71.18deg, rgb(0, 34, 255) -27.32%, rgb(0, 34, 255) -16.39%, rgb(81, 121, 254) -7.38%, rgb(165, 237, 182) 30.59%, rgb(250, 232, 90) 46.06%, rgb(253, 172, 62) 62.61%, rgb(255, 92, 0) 75.82%) repeat scroll 0% 0%;
 		}
@@ -57,8 +58,21 @@
 		var theme = null;
 
 		window.onload = () => {
-			theme = preferedTheme()
+			initTheme()
 			document.querySelector('#theme-toggle')?.addEventListener('click', changeTheme)
+		}
+
+		function initTheme() {
+			if(localStorage.getItem('color-scheme') == null) {
+				theme = preferedTheme()
+			} else {
+				theme = localStorage.getItem('color-scheme')
+			}			
+			setTheme(theme)				
+		}
+
+		function setTheme(theme) {
+			document.firstElementChild.setAttribute('color-scheme', theme)
 		}
 
 		function preferedTheme() {
@@ -67,9 +81,10 @@
 
 		function changeTheme() {		
 			theme = theme === 'light' ? 'dark' : 'light'
-			document.firstElementChild.setAttribute('color-scheme', theme)
+			setTheme(theme)
+			localStorage.setItem('color-scheme', theme)
 			console.log("Change theme", theme);
-		}
+		}		
 	</script>
 </head>
 <body>
