--- a/prefers-color-scheme/index.html
+++ b/prefers-color-scheme/index.html
@@ -4,52 +4,75 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Change color theme</title>
+	<title>Change theme color</title>
 
 	<style>
 		:root {
 			--bg: #fff;
-			--btn: #0099ff;
+			--bg-light: #dfe7ee;
+			--text: #fcfdff;
+			--color1: #14a7d5;
+			--color2: #7d4242;
 		}
 
 		@media (prefers-color-scheme: dark) {
-			:root {
-				--bg: #0099ff;
-				--btn: #fff;
+			:root {				
+				--bg: #22223d;
+				--bg-light: #292a40;
 			}
 		}
 
-		[color-scheme="light"] {			
+		[color-scheme="light"] {
 			color-scheme: light;
-			--bg: #fff;
-			--btn: #0099ff;
+			--bg: #fff;			
+			--bg-light: #dfe7ee;
 		}
 
 		[color-scheme="dark"] {
 			color-scheme: dark;
-			--bg: #0099ff;
-			--btn: #fff;
+			--bg: #22223d;
+			--bg-light: #292a40;	
 		}
 
 		html {
-			background-color: var(--bg);			
+			background-color: var(--bg);
 		}
 
-		button {
-			color: var(--btn);			
-			border: 2px solid var(--btn);
-			padding: 10px 45px;
+		.theme-selector {
+			float: left;
+			width: auto;
+			padding: 10px;
+			border-radius: 10px;
+			background-color: var(--bg-light);
+			position: absolute;
+			bottom: 10px;
+			right: 10px;
+		}
+
+		.theme-selector button {
+			color: var(--text);
+			background: #0099ff;
+			padding: 10px 15px;
 			border-radius: 6px;
+			border: none;
 			cursor: pointer;
-			background: transparent;
+			float: left;
+			width: auto;
+			display: inline-flex;
+			align-items: center;
 		}
 
-		.color {
+		.theme-selector button:hover {
+			color: var(--text);
+			background: #7bf303;
+		}
+
+		.rainbow-text-color {
 			background: rgba(0, 0, 0, 0) linear-gradient(71.18deg, rgb(0, 34, 255) -27.32%, rgb(0, 34, 255) -16.39%, rgb(81, 121, 254) -7.38%, rgb(165, 237, 182) 30.59%, rgb(250, 232, 90) 46.06%, rgb(253, 172, 62) 62.61%, rgb(255, 92, 0) 75.82%) repeat scroll 0% 0% padding-box text;			
 			-webkit-text-fill-color: transparent;
 		}
 		
-		.bg-color {
+		.rainbow-bg-color {
 			background: rgba(0, 0, 0, 0) linear-gradient(71.18deg, rgb(0, 34, 255) -27.32%, rgb(0, 34, 255) -16.39%, rgb(81, 121, 254) -7.38%, rgb(165, 237, 182) 30.59%, rgb(250, 232, 90) 46.06%, rgb(253, 172, 62) 62.61%, rgb(255, 92, 0) 75.82%) repeat scroll 0% 0%;
 		}
 	</style>
@@ -63,32 +86,34 @@
 		}
 
 		function initTheme() {
+			// Get
 			if(localStorage.getItem('color-scheme') == null) {
-				theme = preferedTheme()
+				theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'
 			} else {
 				theme = localStorage.getItem('color-scheme')
-			}			
-			setTheme(theme)				
-		}
-
-		function setTheme(theme) {
+			}	
+			// Update
 			document.firstElementChild.setAttribute('color-scheme', theme)
+			localStorage.setItem('color-scheme', theme)	
 		}
 
-		function preferedTheme() {
-			return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'
-		}
-
-		function changeTheme() {		
+		function changeTheme() {
+			// Change
 			theme = theme === 'light' ? 'dark' : 'light'
-			setTheme(theme)
-			localStorage.setItem('color-scheme', theme)
-			console.log("Change theme", theme);
+			// Update
+			document.firstElementChild.setAttribute('color-scheme', theme)
+			localStorage.setItem('color-scheme', theme)	
+			console.log("Changed", theme)
 		}		
 	</script>
 </head>
 <body>
-	<h1 class="color" style="width: 300px;">Change color theme</h1>
-	<button id="theme-toggle"> Change Theme </button>	
+
+	<div class="theme-selector">
+		<button id="theme-toggle"> 
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="none" stroke="#ffffff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">&lt;!--!  Atomicons Free 1.00 by @atisalab License - https://atomicons.com/license/ (Icons: CC BY 4.0) Copyright 2021 Atomicons --&gt;<circle cx="12" cy="12" r="4"></circle><line x1="12" y1="2" x2="12" y2="4"></line><line x1="12" y1="20" x2="12" y2="22"></line><line x1="22" y1="12" x2="20" y2="12"></line><line x1="4" y1="12" x2="2" y2="12"></line><line x1="19.07" y1="19.07" x2="17.66" y2="17.66"></line><line x1="6.34" y1="6.34" x2="4.93" y2="4.93"></line><line x1="4.93" y1="19.07" x2="6.34" y2="17.66"></line><line x1="17.66" y1="6.34" x2="19.07" y2="4.93"></line></svg>			
+		</button>	
+	</div>
+
 </body>
 </html>
