Css tęczowy tekst, logo, tło i ramka

--- a/rainbow-text-border/index.html
+++ b/rainbow-text-border/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Css tęczowy tekst, tło i ramka</title>
+		<title>Css tęczowy tekst, logo, tło i ramka</title>
 
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Titan+One&display=swap');
@@ -109,8 +109,10 @@
 			}
 
 			.box {
-				display: inline-block;
 				margin: 20px auto;
+				display: inline-block;
+				border-radius: 10px;
+				overflow: hidden;
 			}
 
 			.logo {
@@ -200,8 +202,8 @@
 			</div>
 		</div>
 
-		<div class="box rainbow-box">
-			<div class="text">
+		<div class="box">
+			<div class="text rainbow-box">
 				<p class="rainbow-text-color-lr title-size">
 					Let's build rainbow border in CSS
 				</p>
