--- a/rainbow-text-border/index.html
+++ b/rainbow-text-border/index.html
@@ -59,6 +59,7 @@
 					)
 					repeat scroll 0% 0% padding-box text;
 				-webkit-text-fill-color: transparent;
+				animation: hue 2s linear infinite;
 			}
 
 			.radial {
@@ -330,7 +331,7 @@
 				);
 				width: 100px;
 				height: 100px;
-				animation: spin 4s infinite linear;
+				animation: spin 4s infinite linear, hue 4s linear infinite;
 			}
 
 			input[type='range'],
