--- a/javascript/mouseover.html
+++ b/javascript/mouseover.html
@@ -5,7 +5,7 @@
 <div id="demo" style="margin-top: 100px; width: 200px; height: 200px; background: #eee" onmouseover="mouseOver(event, this)" onmouseout="mouseOut()">Mouse over me</div>
 
 <script>
-// get div local cursor position
+// Mouse position within element on mouseover
 function mouseOver(e, it) {
   document.getElementById("demo").style.color = "red";
   // 1
