Update and rename mouseover.html to mousemove-mouseover.html
Mouse position within element on mouseover or mousemove event.

--- a/javascript/mousemove-mouseover.html
+++ b/javascript/mousemove-mouseover.html
@@ -5,7 +5,7 @@
 <div id="demo" style="margin-top: 100px; width: 200px; height: 200px; background: #eee" onmouseover="mouseOver(event, this)" onmouseout="mouseOut()">Mouse over me</div>
 
 <script>
-// Mouse position within element on mouseover
+// Mouse position within element on mouseover or mousemove event
 function mouseOver(e, it) {
   document.getElementById("demo").style.color = "red";
   // 1
